# DupeCheck

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
docs/: building.md  data_integrity_and_maintenance.md  detailed_design.md  high_level_architecture.md  project_concept.md  requirements_traceability_matrix.md  software_requirements_specification.md  test_plan.md  user_guide.md  workflow.md
src/: main.cpp  types.h
src/app/: DupeApp.cpp  DupeApp.h
src/engine/: DataRepository.cpp  DataRepository.h  DupeEngine.cpp  DupeEngine.h
src/ui/: ConfigDialog.cpp  ConfigDialog.h  HelpWindow.cpp  HelpWindow.h  MainWindow.cpp  MainWindow.h
tests/: CMakeLists.txt  test_engine.cpp  test_repository.cpp
